fix alignment and layout issues

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,11 +1,11 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap');
 
 html, body, *{
-    
+
     box-sizing: border-box;
     margin: 0px;
     padding: 0px;
-    font-family: 'Roboto', sans-serif; 
+    font-family: 'Roboto', sans-serif;
   }
 
   body{
@@ -17,7 +17,7 @@ html, body, *{
       height: 750px;
       background-repeat: no-repeat;
       background-size: cover;
-      
+
   }
 
   .nav-bar {
@@ -42,11 +42,11 @@ html, body, *{
 
   .service {
       text-decoration: none;
-      color: white; 
+      color: white;
   }
 
   .about-currency {
-      
+
       text-decoration: none;
       font-weight: bold;
       color: white;
@@ -65,7 +65,7 @@ html, body, *{
   }
 
   .nav-bar-link {
-    
+
     text-decoration: none;
   }
 
@@ -85,18 +85,18 @@ html, body, *{
 
   .hero-container {
       display: flex;
-      flex-direction: column; 
+      flex-direction: column;
       margin-top: 150px;
       width: 100%;
       height: 250px;
   }
 
   .hero-text-heading {
-      
+
       padding-left: 250px;
       color: white;
   }
-  
+
 
   .hero-text-heading:first-child{
       padding-bottom: 12px;
@@ -123,9 +123,9 @@ html, body, *{
 
   .white-shoe {
       height: 750px;
-      
+
   }
-  
+
   .brand-logo-img {
       height: 55px;
       width: 120px;
@@ -161,8 +161,8 @@ html, body, *{
 
   .ml-25 {
       margin-left: 25px;
-  } 
-  
+  }
+
   .mr-50 {
       margin-right: 50px;
   }
@@ -180,7 +180,7 @@ html, body, *{
       width: 110px;
       height: 75px;
       margin-top: 100px;
-      
+
   }
 
   .ball {
@@ -191,7 +191,7 @@ html, body, *{
 
 .checklist-category {
     margin-right: 60px;
-    padding-right: 70px; 
+    padding-right: 70px;
     padding-left: 30px;
     float: left;
     height: 830px;
@@ -205,7 +205,7 @@ html, body, *{
 
 .checklist> li{
     padding-bottom: 40px;
-    
+
 }
 
 .checklist-heading {
@@ -216,7 +216,7 @@ html, body, *{
 .products-shopping {
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-between; 
+    justify-content: space-between;
     padding-top: 100px;
     margin-right: 100px;
 }
@@ -225,7 +225,7 @@ html, body, *{
     display: flex;
     flex-direction: column;
     padding-bottom: 25px;
-}  
+}
 
 .product-img {
     height: 200px;
@@ -235,22 +235,22 @@ html, body, *{
 .product-heading {
     text-decoration: none;
     color: black;
-    padding-bottom: 12px;   
+    padding-bottom: 12px;
 }
 
 .loading-button-wrapper {
-    display: flex; 
+    display: flex;
     justify-content: center;
     align-items: center;
     padding-bottom: 60px;
-    padding-top: 30px;   
-} 
+    padding-top: 30px;
+}
 
 .adidas-cover {
     height: 475px;
     width: 100%;
 }
- 
+
 .adidas-shop-section {
     position: relative;
 }
@@ -262,7 +262,7 @@ html, body, *{
     width: 100%;
     position: absolute;
     left: 45%;
-} 
+}
 
 .adidas-shoes > img {
     width: 645px;
@@ -280,7 +280,7 @@ html, body, *{
     font-weight: bold;
     font-size: 40px;
     margin-bottom: 40px;
-    text-transform: uppercase;   
+    text-transform: uppercase;
 }
 
 .featured-items {
@@ -298,7 +298,7 @@ html, body, *{
 .featured-items > .product-card:not(:last-child) {
 
     margin-right: 20px;
-} 
+}
 
 .detail-wrapper {
     display: flex;
@@ -321,7 +321,7 @@ html, body, *{
     padding-top: 120px;
     padding-bottom: 25px;
     font-weight: bolder;
-    
+
 }
 
 .golf-shop {
@@ -361,24 +361,25 @@ html, body, *{
     color: white;
     background: black;
     display: flex;
+    flex-direction: column;
+    padding: 120px 45px 50px;
+}
+
+.footer-links {
+    display: flex;
     justify-content: space-between;
-    padding: 120px 45px;
-    width: 100%;
 }
 
 .footer-img {
-    width:f 132px;
+    width: 132px;
     height: 57px;
-    
 }
 
 .footer-content>h3{
     padding-bottom: 24px;
-
 }
 
-.footer-content>ul{
-
+.footer-content > ul {
     list-style-type: none;
 }
 
@@ -387,12 +388,6 @@ html, body, *{
     font-size: 13px;
     font-weight: bolder;
     padding-bottom: 30px;
-}
-
-.footer-content {
-    margin-left: 120px;
-    
-    
 }
 
 .footer-content>p {
@@ -412,6 +407,15 @@ html, body, *{
     padding-left: 8px;
 }
 
+.copyright {
+    padding-top: 80px;
+    font-size: 12px;
+}
+
+.dropdown {
+    display: flex;
+    margin-left: 40px;;
+}
 
 
 
@@ -424,16 +428,12 @@ html, body, *{
 
 
 
- 
 
 
 
 
 
 
-  
 
 
 
-  
- 
